Allow ignoring missing dependencies